--- a/src/app/components/event-details/event-details.component.html
+++ b/src/app/components/event-details/event-details.component.html
@@ -1,5 +1,6 @@
 <div id="main-container">
     <div id="card-container">
+        <button (click)="close()">X</button>
         <div id="name-div">
             <div id="name-div-2">
                 <h3>{{event.name}}</h3>
